--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
 
+    container_name: network_security_api
+
     restart: unless-stopped
 
     ports:
@@ -15,11 +17,67 @@ services:
 
     environment:
       - PYTHONUNBUFFERED=1
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+    depends_on:
+      redis:
+        condition: service_healthy
+
+    command: >
+      python -m uvicorn app:app
+      --host 0.0.0.0
+      --port 8000
+      --workers 2
 
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 5s
       retries: 3
 
-    command: python -m uvicorn app:app --host 0.0.0.0 --port 8000 --workers 2
+
+  worker:
+    image: network-security:1.0.0
+    container_name: network_security_worker
+
+    restart: unless-stopped
+
+    env_file:
+      - .env
+
+    environment:
+      - PYTHONUNBUFFERED=1
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+    depends_on:
+      redis:
+        condition: service_healthy
+
+    command: >
+      celery -A src.utils.main_utils.app_utils.celery_app
+      worker
+      --loglevel=info
+      --concurrency=4
+
+
+  redis:
+    image: redis:7-alpine
+    container_name: network_security_redis
+
+    restart: unless-stopped
+
+    ports:
+      - "6379:6379"
+
+    command: >
+      redis-server
+      --save 60 1
+      --loglevel warning
+
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
